# dsa-c-course

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  format.sh
.github/workflows/: ci.yaml
build nonono/: CTestTestfile.cmake
build nonono/Testing/Temporary/: CTestCostData.txt
build nonono/playground/: hello
build nonono/tests/: CTestTestfile.cmake  test_add  test_binary_search  test_linear_search  test_queue  test_stack
docs/: basic_data_structures.md  basic_search.md  git.md  graphs.md  hash_tables_and_trees_intro.md  projects.md
include/dsalib/containers/: queue.h  stack.h
include/dsalib/math/: add.h
include/dsalib/search/: binary_search.h  linear_search.h
playground/: CMakeLists.txt
scripts/: format.sh
src/: add.c
src/containers/: queue.c  stack.c
src/math/: add.c
src/search/: binary_search.c  linear_search.c
tests/: CMakeLists.txt  test_add.c  test_binary_search.c  test_linear_search.c  test_queue.c  test_stack.c
